<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"
    android:backgroundTint="#DAE0F1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="200dp"
        android:text="@string/textViewRegistrate"
        android:textColor="#0D2EA3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/textViewTexto_2"
        android:textColor="#193178"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewRegistrate"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrate" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/textViewNombre"
        android:textColor="#193178"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/baseline_account_box_24"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtNombre"
        app:layout_constraintStart_toEndOf="@+id/txtNombre"
        app:layout_constraintTop_toTopOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/textViewApellido"
        android:textColor="#193178"
        app:layout_constraintEnd_toEndOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/baseline_account_box_24"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/txtApellido"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/txtApellido" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/textViewEmail"
        android:textColor="#193178"
        app:layout_constraintEnd_toEndOf="@+id/txtApellido"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FBFBFB"
        android:drawableEnd="@drawable/baseline_email_24"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textViewContraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/textViewContraseña"
        android:textColor="#193178"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableEnd="@drawable/baseline_password_24"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContraseña"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/textViewContraseña" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/textViewSexo"
        android:textColor="#193178"
        app:layout_constraintEnd_toEndOf="@+id/textViewContraseña"
        app:layout_constraintTop_toBottomOf="@+id/textViewContraseña" />

    <Spinner
        android:id="@+id/spinner_opciones"
        android:layout_width="154dp"
        android:layout_height="25dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSexo"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/textViewFecha"
        android:textColor="#193178"
        app:layout_constraintEnd_toEndOf="@+id/textViewSexo"
        app:layout_constraintTop_toBottomOf="@+id/textViewSexo" />

    <Spinner
        android:id="@+id/spinner_dias"
        android:layout_width="35dp"
        android:layout_height="23dp"
        android:background="#FBF8F8"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/spinner_opciones"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinner_meses"
        android:layout_width="116dp"
        android:layout_height="23dp"
        android:layout_marginStart="5dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_dias"
        app:layout_constraintStart_toEndOf="@+id/spinner_dias"
        app:layout_constraintTop_toTopOf="@+id/spinner_dias"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_anio"
        android:layout_width="56dp"
        android:layout_height="23dp"
        android:layout_marginStart="5dp"
        android:background="#FAF9F9"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_meses"
        app:layout_constraintStart_toEndOf="@+id/spinner_meses"
        app:layout_constraintTop_toTopOf="@+id/spinner_meses" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtViewPregunta"
        android:textColor="#193178"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/spinner_dias"
        app:layout_constraintTop_toBottomOf="@+id/spinner_meses" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#00a400"
        android:drawableEnd="@drawable/baseline_login_24"
        android:text="REGISTRATE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="#090909"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Crear una página para un famoso, grupo de música o empresa  "
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />


</androidx.constraintlayout.widget.ConstraintLayout>